# SuperTeacher

./: .gitignore  .travis.yml  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.h  CMakeLists.txt  Doxyfile  LICENSE  Organisation Projet  README.md  appveyor.yml  index.html  params.json
assets/: CMakeLists.txt  conf.json
assets/graphics/backgrounds/: Window
assets/graphics/characters/: superteacher.json
assets/levels/: level.json
cmake/: ExternalBox2D.cmake  ExternalGoogleTest.cmake  ExternalJson.cmake  FindSDL2.cmake
docs/: build-travis.sh  build.sh  rapport.adoc
rfc/: 01_logging.md
scripts/: travis-linux-setup.sh  travis-osx-setup.sh
src/: AbstractView.h  Background.cpp  Background.h  CMakeLists.txt  Character.cpp  Character.h  Config.cpp  Config.h  Constants.h  Ground.cpp  Ground.h  HIManager.cpp  HIManager.h  Interactives.cpp  Interactives.h  Logs.cpp  Logs.h  MainWindow.c  MainWindow.cpp  MainWindow.h  Object.cpp  Object.h  Path.cpp  Path.h  Pencil.cpp  Pencil.h  Physics.cpp  Physics.h  ResourceManager.cpp  ResourceManager.h  RessourceManager.cpp  RessourceManager.h  Text.cpp  Text.h  View.cpp  View.h  main.c  main.cpp
tests/: CMakeLists.txt  main.cpp  test_hello.cpp
